<resources>
    <string name="app_name_dev">PodCast_Reactive_MVP(dev)</string>
    <string name="app_name_prod">PodCast_Reactive_MVP(prod)</string>
    <string name="app_name_stag">PodCast_Reactive_MVP(stag)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="podcast">PodCast</string>
    <string name="pre_mins">15</string>
    <string name="test_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type </string>
    <string name="art_design"><![CDATA[ART & DESIGN]]></string>
    <string name="category_title">Women n Tech Podcast, hosted by Espree Devora</string>
    <string name="episode_title">How to Influence with Tactical Empathy</string>
    <string name="categories">Categories</string>
    <string name="your_shows">Your Shows</string>
    <string name="title">Designing for everyone, everywhere with Yosef P.</string>
    <string name="welcome">Welcome</string>
    <string name="des">It took like you are not enrolled in nay podcasts,but it\'s easy to get stated</string>
    <string name="find_something_new">Find something new</string>

    <string name="dot">&#8226;</string>
    <string name="home_fragment">Home</string>
    <string name="search_fragment">Search</string>
    <string name="download_fragment">Download</string>
    <string name="profile_fragment">Profile</string>

    <string name="media_url_mp3">https://chtbl.com/track/24EG4/traffic.libsyn.com/secure/mfceoproject/Ep_55_-_7.10.2020_Pt2.mp3</string>
</resources>